# vtsserving

./: .bazelignore  .gitignore  .pep8speaks.yml  BUILD.bazel  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  GOVERNANCE.md  Makefile  README.md  SECURITY.md  WORKSPACE  pyproject.toml  setup.py
.devcontainer/: devcontainer.json
.devcontainer/lifecycle/: post-start
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  frameworks.yml
docs/: README.md
docs/source/: bentoml_wordlist.txt  conf.py  index.rst  installation.rst  tutorial.rst
docs/source/_templates/: base.html
docs/source/concepts/: bento.rst  deploy.rst  index.rst  model.rst  runner.rst  service.rst
docs/source/frameworks/: catboost.rst  fastai.rst  index.rst  keras.rst  lightgbm.rst  onnx.rst  picklable.rst  pytorch.rst  pytorch_lightning.rst  sklearn.rst  tensorflow.rst  transformers.rst  xgboost.rst
docs/source/guides/: batching.rst  ci.rst  client.rst  configuration.rst  containerization.rst  gpu.rst  graph.rst  grpc.rst  index.rst  logging.rst  metrics.rst  migration.rst  performance.rst  security.rst  server.rst  tracing.rst
docs/source/integrations/: airflow.rst  flink.rst  mlflow.rst
docs/source/reference/: api_io_descriptors.rst  cli.rst  core.rst  index.rst  metrics.rst  stores.rst
docs/source/reference/frameworks/: catboost.rst  (+10 more)
examples/: README.md
examples/custom_model_runner/: README.md  requirements.txt  service.py  train.py
examples/custom_python_model/lda_classifier/: README.md  requirements.txt  service.py  train.py
examples/custom_python_model/simple_pickable_model/: README.md  model.py  requirements.txt  service.py
examples/custom_runner/nltk_pretrained_model/: README.md  download_nltk_models.py  requirements.txt  service.py
examples/custom_runner/torch_hub_yolov5/: README.md  requirements.txt  service.py
examples/custom_web_serving/fastapi_example/: README.md  requirements.txt  service.py  train.py
examples/custom_web_serving/flask_example/: README.md  service.py  train.py
examples/inference_graph/: README.md  bentofile.yaml  deployment.yaml  requirements.txt  service.py  train.py
examples/keras/: service.py
examples/keras/tests/: conftest.py
examples/kfserving/: bentofile.yaml  custom_kfserving_deployment.yaml  requirements.txt  service.py
examples/lightgbm/: README.md  service.py
examples/mlflow/keras/: train.py
examples/mlflow/lightgbm/: README.md  conda.yaml  train.py
examples/mlflow/pytorch/: README.md  conda.yaml  mnist.py  service.py
examples/mlflow/sklearn_autolog/: grid_search_cv.py  linear_regression.py  pipeline.py
examples/mlflow/sklearn_logistic_regression/: conda.yaml  train.py
examples/monitoring/task_classification/: README.md  bentofile.yaml  locustfile.py  requirements.txt  service.py  train.py
examples/pydantic_validation/: README.md  requirements.txt  service.py
examples/pytorch_mnist/: README.md  bentofile.yaml  pytorch_mnist_demo.ipynb  requirements.txt  service.py  train.py
examples/pytorch_mnist/tests/: conftest.py  test_prediction.py
examples/quickstart/: BENCHMARK.md  README.md  bentofile.yaml  iris_classifier.ipynb  locustfile.py  service.py  train.py
examples/sklearn/linear_regression/: README.md  requirements.txt  service.py  train.py
examples/sklearn/pipeline/: README.md  service.py  train.py
examples/sklearn_lr/: service.py
examples/tensorflow/: requirements-macos.txt  service.py  train.py
examples/tensorflow2_keras/: README.md  bentofile.yaml  tensorflow2_mnist_demo.ipynb  train.py
examples/tensorflow2_keras/tests/: test_prediction.py
examples/tensorflow2_native/: README.md  requirements.txt  tensorflow2_mnist_demo.ipynb  train.py
examples/torch_hub_yolov5/: README.md  requirements.txt  service.py
examples/xgboost/: README.md  agaricus.ipynb  agaricus.py  bentofile.yaml  requirements.txt  service.py  train.py  vtsfile.yaml
grpc-client/: README.md
grpc-client/cpp/: client.cc
grpc-client/go/: BUILD.bazel  client  client.go  go.mod
grpc-client/java/: BUILD.bazel  build.gradle
grpc-client/kotlin/: BUILD.bazel  build.gradle.kts
grpc-client/node/: client.js  hack  package.json
grpc-client/php/: BentoServiceClient.php  client  codegen  composer.json
grpc-client/python/: client.py
grpc-client/swift/: Package.swift  client
scripts/: generate_grpc_stubs.sh  release_pypi.sh  release_quickstart_bento.sh  release_quickstart_image.sh
src/bentoml/: __init__.py  bentos.py
src/bentoml/_internal/: context.py
src/bentoml/testing/: server.py
src/bentoml_cli/: bentos.py  cli.py  containerize.py  env.py  serve.py  start.py  utils.py
src/bentoml_cli/worker/: grpc_api_server.py  http_api_server.py
src/vtsserving/: __init__.py  __main__.py  client.py  container.py  exceptions.py  fasttext.py  metrics.py  metrics.pyi  models.py  serve.py  start.py  vtss.py
src/vtsserving/_internal/: context.py  exportable.py  log.py  resource.py  store.py  tag.py  types.py
src/vtsserving/grpc/: types.py
src/vtsserving/testing/: server.py  utils.py
src/vtsserving_cli/: bentos.py  cli.py  containerize.py  env.py  models.py  serve.py  start.py  utils.py  vtss.py  yatai.py
src/vtsserving_cli/worker/: README.md  grpc_api_server.py  grpc_dev_api_server.py  grpc_prometheus_server.py  http_api_server.py  http_dev_api_server.py  runner.py
tests/: test_cli_regression.py
tests/e2e/: README.md
tests/e2e/bento_server_grpc/: context_server_interceptor.py  python_model.py  service.py  train.py
tests/e2e/bento_server_http/: pickle_model.py  service.py  train.py
tests/integration/frameworks/: conftest.py  test_fastai_unit.py  test_frameworks.py  test_pytorch_unit.py  test_tensorflow_unit.py  test_transformers_unit.py
tests/proto/: service_test.proto  service_test_pb2.py
tests/unit/: conftest.py  test_metrics.py  test_models.py
tests/unit/_internal/: test_configuration.py  test_resource.py  test_service_api.py  test_store.py  test_utils.py
tests/unit/grpc/: conftest.py  test_grpc_utils.py
(+232 files in other folders)
